Fixed header sizing issue on firefox

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -14,6 +14,7 @@
     margin-right: 2rem;
     border: 1px solid #ddd;
     border-radius: 50%;
+    flex-shrink: 0;
   }
 
   @media screen and (max-width: $break-point) {
